CSS spacing fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,7 +106,7 @@ header {
 // }
 
 .post-display {
-  // padding-top: 3%;
+  padding-top: 3%;
 
   :hover {
     background-color: rgb(252, 252, 252);
